--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -186,6 +186,9 @@
                                 </div>
                             </div>
                         </li>
+                        <li>
+                            <em><a href="javascript:gotolive()" style="color:#fff">518直播间</a></em>
+                        </li>
                     </ul>
                 </div>
                 </div>
