--- a/WebContent/crm/518.html
+++ b/WebContent/crm/518.html
@@ -312,7 +312,7 @@
     <div class="relitu">
       	<div class="relitu_select">
         <select id="citySelect2"></select>
-        <span class="pull-right">14时</span>
+        <span class="pull-right" id="timeshow2">0时</span>
       </div>
       <div id="mapContainer2" style="background-color:rgba(0,0,0,0.5);width: 100%;height:100%;"></div>
     </div>
@@ -550,7 +550,7 @@
     <div class="relitu">
       	<div class="relitu_select">
         <select id="citySelect"></select>
-        <span class="pull-right">14时</span>
+        <span class="pull-right" id="timeshow">0时</span>
       </div>
       <div id="mapContainer" style="background-color:rgba(0,0,0,0.5);width: 100%;height:100%;"></div>
     </div>
@@ -1643,6 +1643,8 @@ Date.prototype.format=function(fmt) {
 	var heatmap;
 	function initData(){
 		var cityno = $("#citySelect option:selected").val();
+		var timeshow = firstDate.getHours()
+		$("#timeshow").html(timeshow+"时");
 		doManager("festivalStatManager", "queryOrderHeatInfo",[bdate,cityno], function(data, textStatus,XMLHttpRequest) {
 	        if(data.result){
 	        	jsonData = JSON.parse(data.data);
@@ -1681,7 +1683,7 @@ Date.prototype.format=function(fmt) {
 		var timeH = firstDate.getHours()+1;
 		firstDate.setHours(timeH);
 		bdate = firstDate.format('yyyy/MM/dd HH:mm');
-		if(timeH >= new Date().getHours()){
+		if(timeH > new Date().getHours()){
 			window.clearInterval(mapTimeTicket);
 			setTimeout(function(){
 				heatmap.setDataSet({
@@ -1725,7 +1727,7 @@ Date.prototype.format=function(fmt) {
 		diverRecodeArray = [];
 		maxlocationIndex = 0;
 		requestInfoDto = {//城市
-				cityno: $("#citySelect option:selected").val();,
+				cityno: $("#citySelect2 option:selected").val(),
 		        beginDate:new Date().format('yyyy/MM/dd')+" 00:00",
 		        endDate:new Date().format('yyyy/MM/dd HH:mm')
 		}
@@ -1760,7 +1762,7 @@ Date.prototype.format=function(fmt) {
    					}
 	    		}
 	    		var timeshow = 0;
-	    		var timeIndex = praseInt(maxlocationIndex/new Date().getHours());
+	    		var timeIndex = parseInt(maxlocationIndex/new Date().getHours());
 	    		setTimeout(function(){
 	    			console.log(maxlocationIndex);
 	    			 for(var z = 0; z < maxlocationIndex; z++){
@@ -1768,9 +1770,15 @@ Date.prototype.format=function(fmt) {
 	    					 var x = z;
 	    				 setTimeout(function (){
 	    					 console.log(new Date());
-		    					 if(z%timeIndex == 0){
+		    					 if(x%timeIndex == 0){
+		    						 debugger;
 		    						 timeshow++;
-		    						 $("#timeshow").html(timeshow+"时")
+		    						 if(timeshow <= new Date().getHours()){
+		    							 $("#timeshow2").html(timeshow+"时"); 
+		    						 }else{
+		    							 $("#timeshow2").html(0+"时") 
+		    						 }
+		    						 
 		    					 }
 	    						for(var i = 0; i < diverRecodeArray.length; i++){
 	    							var empDiver = diverRecodeArray[i];
@@ -1824,7 +1832,7 @@ Date.prototype.format=function(fmt) {
 	var drawEmployeePosition = function(diverLocations,employeeInfo,online){
 		var marker = new AMap.Marker({
 			 map:map2,
-			 icon:"dist/518img/518gaxlogo.png",
+			 icon:"dist/518img/518gaxlogo3.png",
 			 position: diverLocations,
 			 offset: new AMap.Pixel(-10, -20),
 			 /* extData:{
