修改城市显示样式

--- a/WebContent/crm/518.html
+++ b/WebContent/crm/518.html
@@ -105,13 +105,13 @@
       background: -o-linear-gradient(right, rgba(255,255,255,0), rgba(141,151,70,0.3)); /* Opera 11.1 - 12.0 */
       background: -moz-linear-gradient(right, rgba(255,255,255,0), rgba(141,151,70,0.3)); /* Firefox 3.6 - 15 */
       background: linear-gradient(to right, rgba(255,255,255,0), rgba(141,151,70,0.3)); /* 标准的语法（必须放在最后） */
-      color: #f6ba6b; height: 30px; line-height: 30px;white-space:nowrap; text-overflow:ellipsis; -o-text-overflow:ellipsis; overflow:hidden;}
+      color: #f6ba6b; height: 30px; line-height: 30px;white-space:nowrap; text-overflow:ellipsis; -o-text-overflow:ellipsis; overflow:hidden;width:80%;}
     .sales-amount .progress{background: -webkit-linear-gradient(rgba(255,255,255,0), rgba(141,151,70,0.3)); background: -o-linear-gradient(right, rgba(255,255,255,0), rgba(141,151,70,0.3)); background: -moz-linear-gradient(right, rgba(255,255,255,0), rgba(141,151,70,0.3)); background: linear-gradient(to right, rgba(255,255,255,0), rgba(141,151,70,0.3)); height: 5px;}
     .sales-amount .progress-bar{background-color: #eb9017;}
 
     /*右边*/
     .city_progress{line-height: 30px;}
-    .city_tit{white-space:nowrap; text-overflow:ellipsis; -o-text-overflow:ellipsis; overflow:hidden; color: #00f0ff;}
+    .city_tit{white-space:nowrap; text-overflow:ellipsis; -o-text-overflow:ellipsis; overflow:hidden; color: #00f0ff;width:80%;}
     .proportion li{padding: 10px 1.5%;}
     .proportion .product_num{width: 30px; text-align: center; top: 16px;}
     .proportion .product_nav{margin-left: 30px;}
